; ModuleID = '/home/carl/AnghaBench/freebsd/sys/kern/extr_subr_hints.c_resource_long_value.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/kern/extr_subr_hints.c_resource_long_value.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EFTYPE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @resource_long_value(i8* %0, i32 %1, i8* %2, i64* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i64*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i8*, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i64, align 8
  %14 = alloca i32, align 4
  store i8* %0, i8** %6, align 8
  store i32 %1, i32* %7, align 4
  store i8* %2, i8** %8, align 8
  store i64* %3, i64** %9, align 8
  store i32 0, i32* %14, align 4
  %15 = load i8*, i8** %6, align 8
  %16 = load i8*, i8** %8, align 8
  %17 = call i32 @resource_find(i32* %14, i32* null, i8* %15, i32* %7, i8* %16, i32* null, i32* null, i32* null, i32* null, i32* null, i32* null, i8** %11)
  store i32 %17, i32* %10, align 4
  %18 = load i32, i32* %10, align 4
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %20, label %22

20:                                               ; preds = %4
  %21 = load i32, i32* %10, align 4
  store i32 %21, i32* %5, align 4
  br label %41

22:                                               ; preds = %4
  %23 = load i8*, i8** %11, align 8
  %24 = load i8, i8* %23, align 1
  %25 = sext i8 %24 to i32
  %26 = icmp eq i32 %25, 0
  br i1 %26, label %27, label %29

27:                                               ; preds = %22
  %28 = load i32, i32* @EFTYPE, align 4
  store i32 %28, i32* %5, align 4
  br label %41

29:                                               ; preds = %22
  %30 = load i8*, i8** %11, align 8
  %31 = call i64 @strtoul(i8* %30, i8** %12, i32 0)
  store i64 %31, i64* %13, align 8
  %32 = load i8*, i8** %12, align 8
  %33 = load i8, i8* %32, align 1
  %34 = sext i8 %33 to i32
  %35 = icmp ne i32 %34, 0
  br i1 %35, label %36, label %38

36:                                               ; preds = %29
  %37 = load i32, i32* @EFTYPE, align 4
  store i32 %37, i32* %5, align 4
  br label %41

38:                                               ; preds = %29
  %39 = load i64, i64* %13, align 8
  %40 = load i64*, i64** %9, align 8
  store i64 %39, i64* %40, align 8
  store i32 0, i32* %5, align 4
  br label %41

41:                                               ; preds = %38, %36, %27, %20
  %42 = load i32, i32* %5, align 4
  ret i32 %42
}

declare dso_local i32 @resource_find(i32*, i32*, i8*, i32*, i8*, i32*, i32*, i32*, i32*, i32*, i32*, i8**) #1

declare dso_local i64 @strtoul(i8*, i8**, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
